Add login and registration (#1)
* testing one two three

* login workd

* docker-compose with backend, auth basics

Signed-off-by: Tomasz Miśkowicz <tomasz.jan.miskowicz@gmail.com>

* added DEBUG property

Signed-off-by: Tomasz Miśkowicz <tomasz.jan.miskowicz@gmail.com>

* fixed registration

* register now disallows email duplicates

---------

Signed-off-by: Tomasz Miśkowicz <tomasz.jan.miskowicz@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
+
+app.debug=false
