--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,24 @@
 services:
   db:
     image: postgres:alpine
+    container_name: db
     ports:
       - 5432:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+  backend:
+    build: .
+    container_name: backend
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+    depends_on:
+      - db
+    ports:
+      - 8080:8080
+    expose:
+      - 8080
+networks:
+  spring-postgres: {}
