--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
 app.debug=false
+jwt.timeunit=HOURS
+jwt.timeamount=10
