work in progress i dont know whats going on

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5444/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.hikari.connectionTimeout=20000
@@ -11,6 +11,7 @@ spring.jpa.show-sql=true
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
-app.debug=false
+app.debug=true
+
 jwt.timeunit=HOURS
 jwt.timeamount=10
