--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,8 +28,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
       - name: Build with Gradle
-        run: ./gradlew build --console=plain
-
-      - name: Run unit tests
-        run: ./gradlew test --console=plain
+        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+        with:
+          arguments: build
