--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,16 +11,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Setup postgres
         run: docker pull postgres ; sudo docker run -p 5444:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -d postgres
-      - name: Set up JDK 17
+
+      - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
-          java-version: '19.0.2'
+          java-version: '20'
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: ./gradlew build --console=plain
+        run: chmod +x ./gradlew ; ./gradlew test --console=plain
 
       - name: Run unit tests
         run: ./gradlew test --console=plain
