--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Setup postgres
-        run: docker pull postgres ; sudo docker run -p 5444:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -d postgres
+#      - name: Setup postgres
+#        run: docker pull postgres ; sudo docker run -p 5444:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -d postgres
 
       - name: Set up JDK 20
         uses: actions/setup-java@v3
@@ -22,10 +22,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        run: chmod +x ./gradlew ; ./gradlew test --console=plain
+        run: chmod +x ./gradlew ; ./gradlew build --console=plain
 
-      - name: Run unit tests
-        run: ./gradlew test --console=plain
+#      - name: Run unit tests
+#        run: ./gradlew test --console=plain
 
 
         #       - name: Validate Gradle wrapper
