--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,14 +23,12 @@ jobs:
 
       - name: Build with Gradle
         run: chmod +x ./gradlew ; ./gradlew build --console=plain
-
-#      - name: Run unit tests
-#        run: ./gradlew test --console=plain
-
-
-        #       - name: Validate Gradle wrapper
-        #        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-        #      - name: Build with Gradle
-        #        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
-        #        with:
-        #          arguments: build
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: gws
+          path: build/libs/gws.jar
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: gws
