--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
-app.debug=true
+app.debug=false
 
 jwt.timeunit=HOURS
 jwt.timeamount=10
