--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-#      - name: Setup postgres
-#        run: docker pull postgres ; sudo docker run -p 5444:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -d postgres
-
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
@@ -23,12 +20,14 @@ jobs:
 
       - name: Build with Gradle
         run: chmod +x ./gradlew ; ./gradlew build --console=plain
-#      - name: Archive artifacts
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: gws
-#          path: build/libs/gws.jar
-#      - name: Download artifact
-#        uses: actions/download-artifact@v2
-#        with:
-#          name: gws
+
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: gws
+          path: build/libs/gws.jar
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: gws
